--- a/examples/inference/llama3_full_sft.yaml
+++ b/examples/inference/llama3_full_sft.yaml
@@ -1,4 +1,4 @@
-model_name_or_path: saves/llama3-8b/full/sft
-template: llama3
-infer_backend: huggingface  # choices: [huggingface, vllm, sglang]
+model_name_or_path: /home/aiscuser/LLaMA-Factory/saves/qwen2.5-14b_full_sft_from_ai_npc_0624
+template: qwen
+infer_backend: vllm  # choices: [huggingface, vllm, sglang]
 trust_remote_code: true
